--- a/scheduleMock.scss
+++ b/scheduleMock.scss
@@ -83,7 +83,7 @@ session.shortlists {
 }
 
 .fc-agenda-slots td div {
-    height: 50px;
+    // height: 50px;
 }
 
 .hide-custom {
@@ -106,5 +106,52 @@ session.shortlists {
         position: absolute;
         top: 5px;
         left: -34px;
+    }
+}
+
+.editEvent {
+    padding: 1em;
+    background: #fff;
+    box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+    position: absolute;
+    z-index: 10;
+
+    & select {
+        background: white;
+        padding: 1em;
+        border-radius: 2px;
+    }
+
+    .triangle-with-shadow {
+        position: absolute;
+        width: 20px;
+        height: 40px;
+        left: -20px;
+        overflow: hidden;
+        // box-shadow: 0 16px 10px -17px rgba(0,0,0,0.5);
+    }
+    .triangle-with-shadow:after {
+        content: "";
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: white;
+        transform: rotate(45deg);
+        top: 0px;
+        right: -14px;
+        box-shadow: 0 2px 2px rgba(0,0,0,0.1);
+    }
+
+    .close-edit-event {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        opacity: 0.5;
+        transition: 0.3s all ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+        }
     }
 }
