--- a/scheduleMock.scss
+++ b/scheduleMock.scss
@@ -7,7 +7,8 @@ html, body {
 }
 
 session.schedule {
-    width: 60%;
+    width: 100%;
+    height: 72%;
     display: block;
 
     .calendar, .map {
@@ -17,24 +18,25 @@ session.schedule {
     }
 
     & .calendar {
-        width: 100%;
+        width: 40%;
         background: #fafafa;
     }
 
     & .map {
-        width: 0%;
+        width: 60%;
         background: url('../map.png');
         background-size: 200%;
     }
 }
 
 session.shortlists {
-    height: 100%;
-    width: 40%;
+    height: 28%;
+    width: 100%;
     display: block;
     background: #30343d;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
 }
 
 .shortlist {
